integration/fixtures/k8s-session-persistence/ingressroute-sticky/backend-cookie-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-ir-cookie
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: whoami-ir-sticky
