integration/fixtures/k8s-session-persistence/ingressroute-sticky/ingressroute-header.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ir-sticky-header
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami-ir-header.localhost`)
      kind: Rule
      services:
        - name: whoami-ir-header
          port: 80
          sticky:
            header:
              name: X-IR-Sticky
